BANG-1351: Clean up dead code.
